# Uzbekistan-payment-forecasting

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
data/: README.md  exchange_rates_cbu.csv  fetch_exchange_rates.py  generate_data.py  uzbekistan_payments.csv  uzbekistan_payments_enriched.csv
src/: evaluate.py  features.py  inference_validation.py  predict.py  train.py
tests/: test_api.py  test_features.py
