[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uzbekistan-payment-forecasting"
version = "1.0.0"
description = "Production-grade time-series forecasting for Uzbekistan payment volumes"
authors = [
    {name = "Mukhammadali", email = "your.email@example.com"}
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "xgboost>=1.7.0",
    "catboost>=1.1.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "pydantic>=2.0.0",
    "joblib>=1.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "shap>=0.41.0",
    "requests>=2.28.0",
    "slowapi>=0.1.9"
]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*"]
